neural triangle - fleshing out point adjuster

--- a/playground/neural-triangle/neural-triangle.styl
+++ b/playground/neural-triangle/neural-triangle.styl
@@ -80,12 +80,15 @@ body.focused .selector > div {
 .notes {
 	background: #111;
 	padding: 1.5em;
-	font-size: 1.5em;
+	font-size: 1em;
 }
 .notes-links {
 	display: inline-flex;
 	width: 100%;
 	justify-content: center;
+}
+.notes-links a:visited {
+	color: #009688;
 }
 .notes-links a + a {
 	margin-left: 1em;
