--- a/playground/tower.defense/tower.defense.css
+++ b/playground/tower.defense/tower.defense.css
@@ -14,3 +14,9 @@ body {
 canvas {
 	max-width: 1000px;
 }
+img {
+	width: 100%;
+	max-height: 200px;
+	object-fit: contain;
+	object-position: left;
+}
