--- a/playground/chatter/chatter.css
+++ b/playground/chatter/chatter.css
@@ -1,13 +1,26 @@
 body {
 	margin: 0;
-	padding-top: 3em;
-	display: flex;
+	padding-top: 2em;
 	position: absolute;
 	top: 0; bottom: 0; left: 0; right: 0;
+	font-family: Helvetica, Arial, sans-serif;
+	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-	font-family: Helvetica, Arial, sans-serif;
 }
+
+.window {
+	box-sizing: content-box;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	margin: 3em;
+	overflow: hidden;
+	background: #333;
+	padding: 1em;
+	border-radius: 1em;
+}
+
 
 ul {
 	list-style: none;
