--- a/playground/tower.defense/tower.defense.css
+++ b/playground/tower.defense/tower.defense.css
@@ -6,17 +6,41 @@ body {
 	height: 100vh;
 	margin-top: 0;
 	margin-bottom: 0;
-	padding-bottom: 5em;
-	overflow: hidden;
+/* 	padding-bottom: 5em; */
+/* 	overflow: hidden; */
 	align-items: center;
-	box-sizing: border-box;
+/* 	box-sizing: border-box; */
+}
+::-webkit-scrollbar {
+	width: 10px; height: 10px;
+	background: transparent;
+}
+::-webkit-scrollbar-thumb {
+	background: #222;
+}
+.container {
+	width: 100%;
+	height: 100%;
+	overflow-x: scroll;
 }
 canvas {
-	max-width: 1000px;
+/* 	max-width: 1000px; */
+	height: 100%;
+/* 	object-fit: cover; */
+	image-rendering: pixelated;
+	transform: translateX(0px);
 }
 img {
 	width: 100%;
 	max-height: 200px;
 	object-fit: contain;
 /* 	object-position: left; */
+}
+.screen-info {
+	color: white;
+	font-family: monospace;
+	position: absolute;
+	bottom: 0;
+	background: black;
+	padding: 0.2em 1em;
 }
