--- a/playground/tower.defense/tower.defense.css
+++ b/playground/tower.defense/tower.defense.css
@@ -16,7 +16,7 @@ body {
 	background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-	background: #222;
+	background: #2227;
 }
 .container {
 	width: 100%;
@@ -45,7 +45,7 @@ img {
 /* 	object-position: left; */
 }
 .screen-info {
-	color: white;
+	color: #777;
 	font-family: monospace;
 	position: absolute;
 	bottom: 0;
