--- a/playground/mixed-canvas/mixed-canvas.css
+++ b/playground/mixed-canvas/mixed-canvas.css
@@ -5,4 +5,8 @@ body {
 	align-items: center;
 	height: -webkit-fill-available;
 	background: #1c1c1c;
+	overflow: hidden;
+}
+canvas {
+	width: 80%;
 }
