--- a/playground/gameAsGame/index.css
+++ b/playground/gameAsGame/index.css
@@ -15,7 +15,12 @@ body {
 	justify-content: center;
 	align-items: center;
 	margin-top: 1em;
-	font-size: 2vw;
+	font-size: 2vmin;
+}
+@media only screen and (min-width: 650px) {
+  body {
+    font-size: 15px;
+  }
 }
 .header {
 	font-size: 8em;
@@ -50,7 +55,7 @@ body {
 	padding-left: 0.2em;
 }
 .wrapper {
-	max-width: 600px;
+	max-width: 400px;
 	width: 70%;
 	perspective: 700px;
 	margin-top: -6em;
@@ -76,9 +81,20 @@ body {
 	color: #00e1f9;
 }
 .piece {
-	font-size: 10em;
+	font-size: 9em;
 	position: absolute;
 	pointer-events: none;
+	transform-style: preserve-3d;
+	transform-origin: 0% 70%;
+	transform: translate(0, -20%) rotateX(-10deg);
+}
+.piece.black {
+	color: #1a0e1e;
+	text-shadow: 0px -2px #995599;
+}
+.piece.white {
+	color: #bcc;
+	text-shadow: 0px 2px #cff;
 }
 .board > div.selected,
 .board > div:hover,
@@ -93,14 +109,16 @@ body {
 	max-width: 600px;
 	grid-gap: 0.2em;
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 	margin-top: 2em;
 }
 .controls > pre {
 	text-align: center;
-	padding: 0.5em;
-	font-size: 1.5em;
+	padding: 0em;
+	font-size: 3em;
 	cursor: pointer;
 	background: #333;
 	margin: 0;
 }
+.controls > pre.white { color: #cdd; background: #566; }
+.controls > pre.black { color: #aa88aa; background: #434; }
