--- a/playground/gameAsGame/index.css
+++ b/playground/gameAsGame/index.css
@@ -82,12 +82,26 @@ body {
 }
 .piece {
 	font-size: 9em;
+}
+.piece,
+.piece-container canvas {
 	position: absolute;
 	pointer-events: none;
 	transform-style: preserve-3d;
-	transform-origin: 0% 70%;
-	transform: translate(0, -20%) rotateX(-10deg);
+	transform-origin: 0% 50%;
+	transform: translate(0, 0%) rotateX(-45deg);
 }
+.piece-container {
+	position: relative;
+	perspective: 200px;
+}
+.piece-container canvas {
+	image-rendering: pixelated;
+	bottom: 0;
+	width: 100%;
+	height: 140%;
+}
+
 .piece.black {
 	color: #1a0e1e;
 	text-shadow: 0px -2px #995599;
