--- a/playground/gameAsGame/index.css
+++ b/playground/gameAsGame/index.css
@@ -17,6 +17,9 @@ body {
 	margin-top: 1em;
 	font-size: 2vmin;
 }
+body > canvas {
+	image-rendering: pixelated;
+}
 @media only screen and (min-width: 650px) {
 	body {
 		font-size: 15px;
