--- a/playground/gameAsGame/index.css
+++ b/playground/gameAsGame/index.css
@@ -12,15 +12,16 @@
 body {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: start;
 	align-items: center;
 	margin-top: 1em;
 	font-size: 2vmin;
 	background: linear-gradient(
 		0deg,
-		#002,
-		#014f66
+		rgb(26 16 2),
+		rgb(74 177 209)
 	);
+	height: 100vh;
 }
 }
 body > canvas {
