--- a/playground/webrtc/index.css
+++ b/playground/webrtc/index.css
@@ -1,3 +1,10 @@
+/*
+
+operating system styles 
+https://www.sitepoint.com/css-system-styles/
+
+*/
+
 body {
 	display: flex;
 	justify-content: center;
