--- a/playground/webrtc/index.css
+++ b/playground/webrtc/index.css
@@ -15,7 +15,7 @@ body {
 }
 body, pre { box-sizing: border-box; }
 
-textarea:focus, button:focus {
+input:focus, button:focus {
 	outline: none;
 /* 	box-shadow: inset 0 0 0 2px Highlight; */
 	box-shadow: inset 0 0 0 2px orange;
@@ -34,36 +34,46 @@ form > * + * {
 body #outgoing {
 	display: none;
 }
+.chat-wrapper { width: 100%; height: 100%; }
+.chat-wrapper form {
+	width: 100%;
+	height: 100%;
+	/*width: 600px;*/
+	/*max-width: 90vw;*/
+}
+
 #outgoing, #incoming, #log {
-	width: 600px;
-	max-width: 90vw;
-	height: 200px;
-	max-height: 25vh;
+	width: 100%;
 	overflow: scroll;
 	word-wrap: break-word;
 	white-space: break-spaces;
-	border: 1px solid currentColor;
 	display: block;
 	padding: 10px;
+	flex: 1;
 }
-textarea#incoming {
-	margin-top: -15px;
+input#incoming {
 	height: calc(1em + 25px);
 	min-height: calc(1em + 25px);
-	overflow: hidden;
-	resize: vertical;
+	flex: 1;
 }
 button#chat-send {
-	margin-top: -1px;
-	border-radius: 0;
-	border: 1px solid currentColor;
-	border-top: 0;
+	border: 0;
 	background: #5c855c;
 	padding: 5px;
+	right: 7px;
+	position: absolute;
+	margin: 0;
+}
+.chat-input {
+	display: flex;
+	flex-direction: row;
+	position: relative;
+	align-items: center;
 }
 .role-switcher {
 	display: flex;
 	align-items: center;
+	padding: 1em 0.5em;
 }
 .role-switcher > * + * {
 	margin-left: 10px;
