--- a/playground/webrtc/index.css
+++ b/playground/webrtc/index.css
@@ -18,7 +18,7 @@ body, pre { box-sizing: border-box; }
 input:focus, button:focus {
 	outline: none;
 /* 	box-shadow: inset 0 0 0 2px Highlight; */
-	box-shadow: inset 0 0 0 2px orange;
+/* 	box-shadow: inset 0 0 0 2px orange; */
 }
 
 form {
