--- a/playground/webrtc/index.css
+++ b/playground/webrtc/index.css
@@ -67,14 +67,24 @@ input#incoming {
 }
 button#chat-send {
 	border: 0;
-	background: ButtonFace;
+	/* background: ButtonFace; */
 	padding: 5px;
-	right: 1.25em;
+	right: 1em;
 	position: absolute;
 	margin: 0;
 	border-radius: 5px;
 	text-transform: uppercase;
-	color: ButtonText;
+	/* color: ButtonText; */
+	color: ButtonFace;
+	background: transparent;
+	height: 2.75em;
+}
+button#chat-send:hover {
+	color: Highlight;
+}
+button#chat-send svg {
+	fill: currentColor;
+	width: 100%; height: 100%;
 }
 .chat-input {
 	display: flex;
