--- a/playground/webrtc/index.css
+++ b/playground/webrtc/index.css
@@ -82,6 +82,9 @@ button#chat-send {
 button#chat-send:hover {
 	color: Highlight;
 }
+@media (hover: none) {
+	button#chat-send:hover { color: inherit; }
+}
 button#chat-send svg {
 	fill: currentColor;
 	width: 100%; height: 100%;
