--- a/playground/webrtc/index.css
+++ b/playground/webrtc/index.css
@@ -64,6 +64,7 @@ input#incoming {
 	border-radius: 9px;
 	padding-top: 2em;
 	padding-bottom: 2em;
+	padding-left: 1.25em;
 }
 button#chat-send {
 	border: 0;
