--- a/playground/webrtc/index.css
+++ b/playground/webrtc/index.css
@@ -84,7 +84,7 @@ button#chat-send:hover {
 	color: ButtonText;
 }
 @media (hover: none) and (pointer: coarse) {
-	button#chat-send:hover { color: inherit; }
+	button#chat-send:hover { color: GrayText; }
 }
 button#chat-send svg {
 	fill: currentColor;
