rssfeed, scroll position recall & link colors change

--- a/playground/rss-feed/index.css
+++ b/playground/rss-feed/index.css
@@ -12,6 +12,7 @@ a {
 	color: #a73;
 	text-decoration: none;
 }
+.feed-title a { color: #c2822e; }
 .flex-row {
 	display: flex;
 	flex-direction: row;
