--- a/playground/tower.defense/visuals/controls.css
+++ b/playground/tower.defense/visuals/controls.css
@@ -100,7 +100,7 @@
 	color: white;
 	border-radius: 50%;
 	box-shadow: 1px 1px 0px 2px black;
-	opacity: 0.5;
+	/* opacity: 0.5; */
 }
 .controls-top .effects > div {
 	font-size: 30px;
@@ -136,6 +136,8 @@
 	border-bottom-left-radius: 10px;
 	mix-blend-mode: overlay;
 	opacity: 0.6;
+	transition: top 0s;
+	top: 100%;
 }
 .controls-bottom .progress.blue {
 	background: #17cdfc;
@@ -150,32 +152,41 @@
 	margin-right: 6px;
 	margin-left: 7px;
 	top: 90%;
+	transition: top 0.6s;
 }
 .progress.vertical.p-20 {
 	top: 80%;
+	transition: top 0.6s;
 }
 .progress.vertical.p-30 {
 	top: 70%;
+	transition: top 0.6s;
 }
 .progress.vertical.p-40 {
 	top: 60%;
+	transition: top 0.6s;
 }
 .progress.vertical.p-50 {
 	top: 50%;
+	transition: top 0.6s;
 }
 .progress.vertical.p-60 {
 	top: 40%;
+	transition: top 0.6s;
 }
 .progress.vertical.p-70 {
 	top: 30%;
+	transition: top 0.6s;
 }
 .progress.vertical.p-80 {
 	top: 20%;
+	transition: top 0.6s;
 }
 .progress.vertical.p-90 {
 	top: 13%;
 	border-top-right-radius: 5px;
 	border-top-left-radius: 5px;
+	transition: top 0.6s;
 }
 .progress.vertical.p-100 {
 	top: 0;
