--- a/playground/rss-feed/index.css
+++ b/playground/rss-feed/index.css
@@ -53,7 +53,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
+	/* justify-content: space-between; */
 }
 .hidden { display: none; }
 body > .feed-item { width: 90%; }
