--- a/playground/faucet/index.css
+++ b/playground/faucet/index.css
@@ -1,27 +1,35 @@
 body {
-	font-family: Arial, sans-serif;
+	font-family: 'Courier New', Courier, monospace;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
-
+.version {
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	font-size: 1em;
+}
 .imageContainer {
 	width: 350px;
+}
+
+svg text,
+svg {
+	user-select: none;
+	pointer-events: none;
 }
 
 svg text {
 	font-family: 'Courier New', Courier, monospace;
 }
-
-#targetTemp {
-	pointer-events: none;
-}
-#targetTempButton {
+svg #targetTempButton {
 	fill: rgb(216, 216, 216);
 	stroke: rgb(0, 0, 0);
 	cursor: pointer;
+	pointer-events: all;
 }
-#targetTempButton.pressed {
+svg #targetTempButton.pressed {
 	fill: yellow;
 }
